--- a/index.html
+++ b/index.html
@@ -22,15 +22,6 @@
     <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
-  }
-}
-</script>
 </head>
   <body class="bg-slate-900 text-slate-300">
     <div id="root"></div>
@@ -76,29 +67,36 @@
       // --- COMPONENTS ---
       const HeroSection = () => {
         return (
-          <section className="min-h-screen flex flex-col items-center justify-center text-center p-8">
-            <div className="relative mb-8">
-              <div className="p-1.5 bg-gradient-to-br from-cyan-400 to-teal-500 rounded-full">
-                <div className="bg-slate-900 p-1 rounded-full">
-                  <img
-                    src="https://raw.githubusercontent.com/pakudin999/portfolio-fikrie/main/photofikrie.png"
-                    alt="Mohamad Fikrie"
-                    className="w-48 h-48 rounded-full object-cover transition-transform duration-300 ease-in-out hover:scale-105"
-                  />
+          <section className="min-h-screen flex items-center justify-center p-8">
+            <div className="max-w-5xl w-full flex flex-col md:flex-row items-center justify-center gap-10 md:gap-16">
+              {/* Left side: Image */}
+              <div className="relative flex-shrink-0">
+                <div className="p-1.5 bg-gradient-to-br from-cyan-400 to-teal-500 rounded-full">
+                  <div className="bg-slate-900 p-1 rounded-full">
+                    <img
+                      src="https://raw.githubusercontent.com/pakudin999/portfolio-fikrie/main/photofikrie.png"
+                      alt="Mohamad Fikrie"
+                      className="w-48 h-48 md:w-60 md:h-60 rounded-full object-cover transition-transform duration-300 ease-in-out hover:scale-105"
+                    />
+                  </div>
                 </div>
               </div>
-            </div>
-            <h1 className="text-5xl md:text-7xl font-extrabold mb-2 gradient-text bg-gradient-to-r from-cyan-400 to-teal-500">
-              Mohamad Fikrie
-            </h1>
-            <h2 className="text-xl md:text-2xl font-medium text-slate-400 mb-4">
-              Content Creator & AI Enthusiast
-            </h2>
-            <div className="w-24 h-1 bg-gradient-to-r from-cyan-400 to-teal-500 rounded-full mb-8"></div>
-            <div className="max-w-2xl p-6 rounded-xl bg-slate-800/50 backdrop-blur-sm border border-slate-700/50">
-              <p className="text-slate-300 leading-relaxed">
-                Seorang kreatif multimedia yang bersemangat dari Johor, Malaysia, dengan diploma dalam Aplikasi Multimedia. Saya menggabungkan kemahiran suntingan terkini dengan inovasi AI untuk menghidupkan penceritaan digital.
-              </p>
+
+              {/* Right side: Text content */}
+              <div className="flex flex-col items-center md:items-start text-center md:text-left">
+                <h1 className="text-5xl md:text-7xl font-extrabold mb-2 gradient-text bg-gradient-to-r from-cyan-400 to-teal-500">
+                  Mohamad Fikrie
+                </h1>
+                <h2 className="text-xl md:text-2xl font-medium text-slate-400 mb-4">
+                  Content Creator & AI Enthusiast
+                </h2>
+                <div className="w-24 h-1 bg-gradient-to-r from-cyan-400 to-teal-500 rounded-full mb-8"></div>
+                <div className="max-w-xl p-6 rounded-xl bg-slate-800/50 backdrop-blur-sm border border-slate-700/50">
+                  <p className="text-slate-300 leading-relaxed">
+                    A passionate multimedia creative from Johor, Malaysia, with a diploma in Multimedia Application. I blend cutting-edge editing skills with AI innovation to bring digital stories to life.
+                  </p>
+                </div>
+              </div>
             </div>
           </section>
         );
