fix: Update project image URLs
The image URLs for the "Report Generator PDF" project were pointing to the main branch of the repository, causing the images to not display correctly. This commit updates the URLs to point to a specific commit hash, ensuring the images are loaded from a stable source.

--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
           title: "Online Order Pro",
           url: "https://autosystem.web.konten.site/",
           images: [
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/main/Artboard%20HOME.png",
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/main/Artboard%20ORDER.png",
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/main/Artboard%20INVOICE.png"
+            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20HOME.png",
+            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20ORDER.png",
+            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20INVOICE.png"
           ],
         },
         {
           title: "Report Generator PDF",
           url: "https://reportmedia.konten.site/",
-          images: [],
+          images: [
+            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20HOME%20-%20REPORT.png",
+            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20PDF%20-%20REPORT.png"
+          ],
         },
         {
           title: "Gold Calculation & Customer Database",
