fix: Update project image URLs
Replaces old GitHub image URLs with newer Imgur links for better reliability and faster loading.

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
       const projects = [
         {
           title: "Online Order Pro",
-          url: "https://autosystem.web.konten.site/",
+          url: "https://imgur.com/a/FzQWiFH",
           images: [
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20HOME.png",
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20ORDER.png",
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20INVOICE.png"
+            "https://i.imgur.com/6qOnFJm.png",
+            "https://i.imgur.com/CdPmjXE.png",
+            "https://i.imgur.com/YvgjzHZ.png"
           ],
         },
         {
           title: "Report Generator PDF",
           url: "https://reportmedia.konten.site/",
           images: [
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20HOME%20-%20REPORT.png",
-            "https://raw.githubusercontent.com/pakudin999/web-porfolio-fikrie-pro/3a8f5f64d048386186b5b54bb47f3b8b939f1591/Artboard%20PDF%20-%20REPORT.png"
+            "https://i.imgur.com/Ewdg1F0.png",
+            "https://i.imgur.com/ytyjmHI.png"
           ],
         },
         {
