--- a/index.html
+++ b/index.html
@@ -313,20 +313,27 @@
                 </div>
 
                 {/* TikTok Card */}
-                <div className="flex flex-col bg-slate-800/50 border border-slate-700/50 rounded-lg p-4 sm:p-6 transition-all duration-300 ease-in-out hover:bg-slate-800 hover:border-cyan-400/50 hover:shadow-lg hover:shadow-cyan-500/10 hover:-translate-y-1">
-                   <div className="flex flex-col flex-grow text-center items-center justify-center">
-                      <TikTokIcon className="w-10 h-10 mb-2 sm:w-16 sm:h-16 sm:mb-4 text-slate-400"/>
-                      <h3 className="text-base sm:text-xl font-bold text-slate-100 mb-2">
-                        🎭 TikTok
-                      </h3>
-                      <p className="text-slate-400 mb-4 text-xs sm:text-sm leading-relaxed max-w-xs">
-                        A place for my spontaneous creative content.
-                      </p>
-                      <a href="https://www.tiktok.com/@konten_beban?_t=ZS-8xC1ifBV3zc&_r=1" target="_blank" rel="noopener noreferrer" className="mt-auto inline-flex items-center justify-center text-center gap-1 bg-cyan-500/10 text-cyan-300 hover:bg-cyan-500/20 px-3 py-2 sm:px-4 rounded-lg transition-colors font-bold self-center text-xs sm:text-sm">
-                        View Profile
-                        <ExternalLinkIcon className="w-4 h-4" />
-                      </a>
-                   </div>
+                <div className="flex flex-col bg-slate-800/50 border border-slate-700/50 rounded-lg p-3 sm:p-4 transition-all duration-300 ease-in-out hover:bg-slate-800 hover:border-cyan-400/50 hover:shadow-lg hover:shadow-cyan-500/10 hover:-translate-y-1">
+                  <div className="aspect-video rounded-md overflow-hidden mb-4">
+                    <img
+                      src="https://i.imgur.com/GfKGtgc.png"
+                      alt="TikTok thumbnail"
+                      className="w-full h-full object-cover"
+                    />
+                  </div>
+                  <div className="flex flex-col flex-grow">
+                    <h3 className="text-base sm:text-xl font-bold text-slate-100 mb-2 flex items-center gap-2">
+                      <TikTokIcon className="w-5 h-5"/>
+                      TikTok
+                    </h3>
+                    <p className="text-slate-400 mb-4 text-xs sm:text-sm leading-relaxed flex-grow">
+                      A place for my spontaneous creative content.
+                    </p>
+                    <a href="https://www.tiktok.com/@konten_beban?_t=ZS-8xC1ifBV3zc&_r=1" target="_blank" rel="noopener noreferrer" className="mt-auto inline-flex items-center justify-center text-center gap-1 bg-cyan-500/10 text-cyan-300 hover:bg-cyan-500/20 px-3 py-2 sm:px-4 rounded-lg transition-colors font-bold self-start text-xs sm:text-sm">
+                      View Profile
+                      <ExternalLinkIcon className="w-4 h-4" />
+                    </a>
+                  </div>
                 </div>
 
               </div>
