feat: Add embedded video to social media section
Embeds a Google Drive video preview into the social media section to showcase featured content.

--- a/index.html
+++ b/index.html
@@ -278,6 +278,18 @@
         return (
           <section id="socials" className="py-20 px-4 md:px-8">
             <div className="max-w-5xl mx-auto">
+              
+              <div className="aspect-video-container mb-12">
+                 <iframe
+                    src="https://drive.google.com/file/d/1b_6DOzPpbvL-BmVTAm4pxVsNtBWKNd4l/preview"
+                    frameBorder="0"
+                    allow="autoplay; encrypted-media"
+                    allowFullScreen
+                    title="Featured Video"
+                    className="w-full h-full"
+                  ></iframe>
+              </div>
+
               <div className="text-center mb-12">
                 <h2 className="text-3xl sm:text-4xl md:text-5xl font-extrabold mb-2 gradient-text bg-gradient-to-r from-cyan-400 to-teal-500">
                   Connect With Me
