--- a/index.html
+++ b/index.html
@@ -279,16 +279,26 @@
           <section id="socials" className="py-20 px-4 md:px-8">
             <div className="max-w-5xl mx-auto">
               
-              <div className="aspect-video-container mb-12">
-                 <iframe
-                    src="https://drive.google.com/file/d/1b_6DOzPpbvL-BmVTAm4pxVsNtBWKNd4l/preview"
-                    frameBorder="0"
-                    allow="autoplay; encrypted-media"
-                    allowFullScreen
-                    title="Featured Video"
-                    className="w-full h-full"
-                  ></iframe>
+               {/* Featured Video with Glassmorphism Effect */}
+              <div className="bg-slate-800/30 backdrop-blur-lg border border-slate-700/50 rounded-xl p-4 md:p-6 mb-16 shadow-lg shadow-cyan-500/10">
+                <div className="flex items-center gap-3 mb-4 px-1">
+                  <div className="w-3 h-3 bg-cyan-400 rounded-full animate-pulse"></div>
+                  <h3 className="text-lg font-bold text-slate-200 tracking-wider">CREATE LOGO/WATERMARK</h3>
+                </div>
+                <div className="relative">
+                  <div className="aspect-video-container">
+                    <iframe
+                      src="https://drive.google.com/file/d/1b_6DOzPpbvL-BmVTAm4pxVsNtBWKNd4l/preview"
+                      frameBorder="0"
+                      allow="autoplay; encrypted-media"
+                      allowFullScreen
+                      title="Featured Video"
+                      className="w-full h-full"
+                    ></iframe>
+                  </div>
+                </div>
               </div>
+
 
               <div className="text-center mb-12">
                 <h2 className="text-3xl sm:text-4xl md:text-5xl font-extrabold mb-2 gradient-text bg-gradient-to-r from-cyan-400 to-teal-500">
