--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
         </svg>
       );
 
+      const WhatsappIcon = ({ className = "w-6 h-6" }) => (
+        <svg xmlns="http://www.w3.org/2000/svg" className={className} viewBox="0 0 24 24" fill="currentColor">
+            <path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.894 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01s-.521.074-.792.372c-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.626.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/>
+        </svg>
+      );
+
       // --- COMPONENTS ---
       const TypingAnimation = ({ text, className }) => {
         const [displayedText, setDisplayedText] = React.useState('');
@@ -275,6 +281,9 @@
       };
 
       const SocialMediaSection = () => {
+        const whatsappMessage = encodeURIComponent("hye, saya nak tanya untuk pakage RM50 Je? Logo Power Macam Ni Pun Boleh?! 🔥 LOGO TYPO STYLE DARI RM100 → RM50 SAHAJA");
+        const whatsappUrl = `https://wa.me/60103602036?text=${whatsappMessage}`;
+
         return (
           <section id="socials" className="py-20 px-4 md:px-8">
             <div className="max-w-5xl mx-auto">
@@ -287,7 +296,7 @@
               </div>
 
                {/* Featured Video with Glassmorphism Effect */}
-              <div className="bg-slate-800/30 backdrop-blur-lg border border-slate-700/50 rounded-xl p-4 md:p-6 mb-16 shadow-lg shadow-cyan-500/10">
+              <div className="max-w-4xl mx-auto bg-slate-800/30 backdrop-blur-lg border border-slate-700/50 rounded-xl p-4 md:p-6 mb-16 shadow-lg shadow-cyan-500/10">
                 <div className="flex flex-col md:flex-row items-center gap-6 md:gap-8">
                   {/* Left: Video Preview */}
                   <div className="w-full md:w-1/2 flex-shrink-0">
@@ -312,12 +321,26 @@
                         🔥 LOGO TYPO STYLE DARI <del className="text-amber-400/50">RM100</del> &rarr; RM50 SAHAJA!
                       </p>
                     </div>
-                    <p className="text-slate-400">
-                      Unik &bull; Cepat &bull; Siap Pakai
-                    </p>
-                    <p className="text-sm text-slate-500 mt-3">
-                      Promo terhad – tempah sekarang!
-                    </p>
+                    
+                    <div className="mt-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4">
+                        <div>
+                            <p className="text-slate-400">
+                                Unik &bull; Cepat &bull; Siap Pakai
+                            </p>
+                            <p className="text-sm text-slate-500 mt-1">
+                                Promo terhad – tempah sekarang!
+                            </p>
+                        </div>
+                        <a 
+                            href={whatsappUrl} 
+                            target="_blank" 
+                            rel="noopener noreferrer"
+                            className="inline-flex items-center gap-2 bg-green-500/10 text-green-300 hover:bg-green-500/20 px-4 py-2 rounded-lg transition-colors font-bold self-start sm:self-auto text-sm shrink-0"
+                        >
+                            <WhatsappIcon className="w-5 h-5" />
+                            <span>Tempah di WhatsApp</span>
+                        </a>
+                    </div>
                   </div>
                 </div>
               </div>
