feat: Update AI tool iframe source
Replaces the embedded voice generator with a link to Google's AI Studio, enhancing the AI enthusiast section with broader tool access. Also removes the custom domain from CNAME.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
@@ -240,7 +241,7 @@
               {activeTab === 'ai' && (
                 <div className="animate-fade-in max-w-4xl mx-auto bg-slate-800/30 backdrop-blur-lg border border-slate-700/50 rounded-xl shadow-lg shadow-cyan-500/10 overflow-hidden">
                     <iframe
-                        src="http://voicegenerator.konten.site/"
+                        src="https://aistudio.google.com/apps/drive/197y-UgPoYhBG2-mixb6lvdjBilLoTm1Q?showAssistant=true&resourceKey=&showPreview=true"
                         style={{ width: '100%', height: '650px', border: 'none' }}
                         title="Voice Generator"
                         sandbox="allow-scripts allow-same-origin"
