--- a/index.html
+++ b/index.html
@@ -239,13 +239,24 @@
               )}
               
               {activeTab === 'ai' && (
-                <div className="animate-fade-in max-w-4xl mx-auto bg-slate-800/30 backdrop-blur-lg border border-slate-700/50 rounded-xl shadow-lg shadow-cyan-500/10 overflow-hidden">
-                    <iframe
-                        src="https://aistudio.google.com/apps/drive/197y-UgPoYhBG2-mixb6lvdjBilLoTm1Q?showAssistant=true&resourceKey=&showPreview=true"
-                        style={{ width: '100%', height: '650px', border: 'none' }}
-                        title="Voice Generator"
-                        sandbox="allow-scripts allow-same-origin"
-                    ></iframe>
+                <div className="animate-fade-in max-w-4xl mx-auto">
+                    <a 
+                      href="https://aistudio.google.com/apps/drive/197y-UgPoYhBG2-mixb6lvdjBilLoTm1Q?showAssistant=true&resourceKey=&showPreview=true" 
+                      target="_blank" 
+                      rel="noopener noreferrer"
+                      className="block bg-slate-800/30 backdrop-blur-lg border-2 border-dashed border-slate-700/50 rounded-xl shadow-lg shadow-cyan-500/10 transition-all duration-300 hover:border-cyan-400 hover:bg-slate-800/50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 focus:ring-cyan-400"
+                      aria-label="Open Voice Generator in a new tab"
+                    >
+                      <div className="flex flex-col items-center justify-center h-[650px] text-center p-8">
+                        <SparklesIcon className="w-16 h-16 mb-4 text-cyan-400/50" />
+                        <h3 className="text-2xl font-bold text-slate-200 mb-2">AI Voice Generator</h3>
+                        <p className="text-slate-400 mb-4">Click to open the project in Google AI Studio.</p>
+                        <div className="inline-flex items-center gap-2 rounded-full bg-slate-700/50 px-4 py-2 text-sm font-medium text-slate-300">
+                          Launch Project
+                          <ExternalLinkIcon className="w-4 h-4" />
+                        </div>
+                      </div>
+                    </a>
                 </div>
               )}
 
