fix: Update AI project link and remove custom domain
The AI project link in the portfolio was updated to a cleaner URL. Additionally, the custom domain CNAME record was removed, reverting to default hosting.

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               {activeTab === 'ai' && (
                 <div className="animate-fade-in max-w-4xl mx-auto">
                     <a 
-                      href="https://aistudio.google.com/apps/drive/197y-UgPoYhBG2-mixb6lvdjBilLoTm1Q?showAssistant=true&resourceKey=&showPreview=true" 
+                      href="https://ai.studio/apps/drive/197y-UgPoYhBG2-mixb6lvdjBilLoTm1Q" 
                       target="_blank" 
                       rel="noopener noreferrer"
                       className="block bg-slate-800/30 backdrop-blur-lg border-2 border-dashed border-slate-700/50 rounded-xl shadow-lg shadow-cyan-500/10 transition-all duration-300 hover:border-cyan-400 hover:bg-slate-800/50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 focus:ring-cyan-400"
